--- a/magic/CJE/请勿使用_仅meta信息.toml
+++ b/magic/CJE/请勿使用_仅meta信息.toml
@@ -4,8 +4,8 @@ author = "裗浳(3612464276)"
 version = "0.0.0"
 license = "CC-BY-NC-SA 4.0"
 date = 2024-12-12
-update_date = 2024-12-17
-desc = "请先更新再使用"
+update_date = 2024-12-18
+desc = "请先更新再使用、但这版更新时容易造成卡死(即未响应)"
 update_Urls = [
   "https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/magic/CJE/magic_all.toml",
   "https://ghp.ci/https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/magic/CJE/magic_all.toml"
