--- a/do_not_use/personal_use_only.toml
+++ b/do_not_use/personal_use_only.toml
@@ -22,6 +22,22 @@ cloud_extra = true
 dictinct = true
 # github raw 链接
 options_urls = [
-  "https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/do_not_use/links.json",
-  "https://ghp.ci/https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/do_not_use/links.json"
+  "https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/do_not_use/links/event.json",
+  "https://ghp.ci/https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/do_not_use/links/event.json"
+]
+
+
+["海豹"]
+export = true
+visible = true
+aliases = ["手册"]
+
+# 提取云
+cloud_extra = true
+# 云本去重
+dictinct = true
+# github raw 链接
+options_urls = [
+  "https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/do_not_use/links/sealdice.json",
+  "https://ghp.ci/https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/do_not_use/links/sealdice.json"
 ]
