--- a/personal/personal_all.toml
+++ b/personal/personal_all.toml
@@ -23,6 +23,7 @@ options_urls = [
   "https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/personal/links/event.json",
   "https://ghp.ci/https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/personal/links/event.json"
 ]
+image_url = "https://github.com/errrr-er/alll/blob/main/magic/CJE/sealdice_update_example.png?raw=true"
 
 
 
