--- a/personal/personal_all.toml
+++ b/personal/personal_all.toml
@@ -49,3 +49,15 @@ options_urls = [
   "https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/personal/links/qq_find.json",
   "https://ghp.ci/https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/personal/links/qq_find.json"
 ]
+
+
+
+["在鸣潮讨论组里看到的乐子"]
+export = true
+options = []
+cloud_extra = true
+dictinct = true
+options_urls = [
+  "https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/personal/links/wuthering_jokes.json",
+  "https://ghp.ci/https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/personal/links/wuthering_jokes.json"
+]
