--- a/personal/personal_all.toml
+++ b/personal/personal_all.toml
@@ -3,7 +3,7 @@ title = "私人使用(链接大合集)"
 author = "errrr-er"
 version = "0.0.0"
 license = "CC-BY-NC-ND 4.0"
-date = 2024-12-26
+date = 2025-01-06
 update_date = 2024-12-31
 desc = "https://github.com/errrr-er/alll/tree/main"
 update_Urls = [
@@ -18,7 +18,7 @@ update_Urls = [
 # 缩写
   # 缩写、abb
 # 海豹
-  # 海豹、手册、分离
+  # 手册、分离
 # QQ
   # 查询、共群
 
@@ -97,15 +97,26 @@ options_urls = [
 
 
 
-["海豹"]
+["手册"]
 export = true
-aliases = ["手册","分离"]
 options = []
 cloud_extra = true
 dictinct = true
 options_urls = [
-  "https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/personal/links/sealdice.json",
-  "https://ghp.ci/https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/personal/links/sealdice.json"
+  "https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/personal/links/sealdice_guide.json",
+  "https://ghp.ci/https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/personal/links/sealdice_guide.json"
+]
+
+
+
+["分离"]
+export = true
+options = []
+cloud_extra = true
+dictinct = true
+options_urls = [
+  "https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/personal/links/sealdice_lagrange.json",
+  "https://ghp.ci/https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/personal/links/sealdice_lagrange.json"
 ]
 
 
