--- a/call_of_cthulhu/magic/CJE/z_magic_all.toml
+++ b/call_of_cthulhu/magic/CJE/z_magic_all.toml
@@ -1,6 +1,6 @@
 [meta]
 title = "旧版手册呪文(三语对照)"
-author = "裗浳(3612464276)"
+author = "3987681449"
 version = "1.0.0"
 license = "CC-BY-NC-SA 4.0"
 date = 2024-12-12
