--- a/call_of_cthulhu/picture/z_picture_all.toml
+++ b/call_of_cthulhu/picture/z_picture_all.toml
@@ -1,6 +1,6 @@
 [meta]
 title = "模组资料(图片)"
-author = "裗浳(3612464276)"
+author = "3987681449"
 version = "1.0.0"
 license = "CC-BY-NC-SA 4.0"
 date = 2025-04-08
