--- a/call_of_cthulhu/picture/picture_all.toml
+++ b/call_of_cthulhu/picture/picture_all.toml
@@ -1,11 +1,11 @@
 [meta]
 title = "模组资料(图片)"
-author = "3987681449"
+author = "3987681449 更新时记得在release下载最新版本对应deck包"
 version = "1.0.0"
 license = "CC-BY-NC-SA 4.0"
 date = 2025-04-08
 update_date = 2025-04-08
-desc = "更新时记得在release下载最新版本对应deck包 https://github.com/errrr-er/alll/tree/main"
+desc = "https://github.com/errrr-er/alll/tree/main"
 update_Urls = [
   "https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/call_of_cthulhu/picture/z_picture_all.toml",
   "https://ghp.ci/https://raw.githubusercontent.com/errrr-er/alll/refs/heads/main/call_of_cthulhu/picture/z_picture_all.toml"
