--- a/call_of_cthulhu/picture/picture_all.toml
+++ b/call_of_cthulhu/picture/picture_all.toml
@@ -17,11 +17,39 @@ visible = true
 options = [""]
 
 
+# 月光舞鞋
 ["西大附中"]
 export = true
 options = ["[图:./_pic.deck/pic/月光舞鞋/西大附中.png]"]
 
 
+# 望君长留
+["爱良"]
+export = true
+options = ["[图:./_pic.deck/pic/望君长留/爱良.png]"]
+
+["釜村徹"]
+export = true
+options = ["[图:./_pic.deck/pic/望君长留/釜村徹.png]"]
+
+["釜村一家"]
+export = true
+options = ["[图:./_pic.deck/pic/望君长留/釜村一家.png]"]
+
+
+# 幽暗之门
+["幽暗预设"]
+export = true
+options = ["[图:./_pic.deck/pic/幽暗之门/幽暗预设1.png]\f[图:./_pic.deck/pic/幽暗之门/幽暗预设2.png]\f[图:./_pic.deck/pic/幽暗之门/幽暗预设3.png]\f[图:./_pic.deck/pic/幽暗之门/幽暗预设4.png]\f[图:./_pic.deck/pic/幽暗之门/幽暗预设5.png]\f[图:./_pic.deck/pic/幽暗之门/幽暗预设6.png]\f[图:./_pic.deck/pic/幽暗之门/幽暗预设7.png]\f[图:./_pic.deck/pic/幽暗之门/幽暗预设8.png]\f[图:./_pic.deck/pic/幽暗之门/幽暗预设9.png]\f[图:./_pic.deck/pic/幽暗之门/幽暗预设10.png]"]
+
+
+# 你就刚刚好
+[""]
+export = true
+options = [""]
+
+
+#夏洛克福尔摩斯症候群
 [""]
 export = true
 options = [""]
