--- a/call_of_cthulhu/picture/picture_all.toml
+++ b/call_of_cthulhu/picture/picture_all.toml
@@ -40,7 +40,7 @@ options = ["[图:./_pic.deck/pic/望君长留/釜村一家.png]"]
 # 幽暗之门
 ["幽暗预设"]
 export = true
-options = ["[图:./_pic.deck/pic/幽暗之门/幽暗预设1.png]\f[图:./_pic.deck/pic/幽暗之门/幽暗预设2.png]\f[图:./_pic.deck/pic/幽暗之门/幽暗预设3.png]\f[图:./_pic.deck/pic/幽暗之门/幽暗预设4.png]\f[图:./_pic.deck/pic/幽暗之门/幽暗预设5.png]\f[图:./_pic.deck/pic/幽暗之门/幽暗预设6.png]\f[图:./_pic.deck/pic/幽暗之门/幽暗预设7.png]\f[图:./_pic.deck/pic/幽暗之门/幽暗预设8.png]\f[图:./_pic.deck/pic/幽暗之门/幽暗预设9.png]\f[图:./_pic.deck/pic/幽暗之门/幽暗预设10.png]"]
+options = ["[图:./_pic.deck/pic/幽暗之门/预设卡/幽暗预设1.png]\f[图:./_pic.deck/pic/幽暗之门/预设卡/幽暗预设2.png]\f[图:./_pic.deck/pic/幽暗之门/预设卡/幽暗预设3.png]\f[图:./_pic.deck/pic/幽暗之门/预设卡/幽暗预设4.png]\f[图:./_pic.deck/pic/幽暗之门/预设卡/幽暗预设5.png]\f[图:./_pic.deck/pic/幽暗之门/预设卡/幽暗预设6.png]\f[图:./_pic.deck/pic/幽暗之门/预设卡/幽暗预设7.png]\f[图:./_pic.deck/pic/幽暗之门/预设卡/幽暗预设8.png]\f[图:./_pic.deck/pic/幽暗之门/预设卡/幽暗预设9.png]\f[图:./_pic.deck/pic/幽暗之门/预设卡/幽暗预设10.png]"]
 
 
 # 你就刚刚好
