--- a/call_of_cthulhu/picture/picture_all.toml
+++ b/call_of_cthulhu/picture/picture_all.toml
@@ -37,11 +37,101 @@ export = true
 options = ["[图:./_pic.deck/pic/望君长留/釜村一家.png]"]
 
 
-# 幽暗之门
+# 幽暗之门·预设卡
 ["幽暗预设"]
 export = true
 options = ["[图:./_pic.deck/pic/幽暗之门/预设卡/幽暗预设1.png]\f[图:./_pic.deck/pic/幽暗之门/预设卡/幽暗预设2.png]\f[图:./_pic.deck/pic/幽暗之门/预设卡/幽暗预设3.png]\f[图:./_pic.deck/pic/幽暗之门/预设卡/幽暗预设4.png]\f[图:./_pic.deck/pic/幽暗之门/预设卡/幽暗预设5.png]\f[图:./_pic.deck/pic/幽暗之门/预设卡/幽暗预设6.png]\f[图:./_pic.deck/pic/幽暗之门/预设卡/幽暗预设7.png]\f[图:./_pic.deck/pic/幽暗之门/预设卡/幽暗预设8.png]\f[图:./_pic.deck/pic/幽暗之门/预设卡/幽暗预设9.png]\f[图:./_pic.deck/pic/幽暗之门/预设卡/幽暗预设10.png]"]
 
+# 幽暗之门·岭下暗影
+["岭下地图1"]
+export = true
+options = ["[图:./_pic.deck/pic/幽暗之门/岭下暗影/岭下地图1.png]"]
+
+["岭下地图2"]
+export = true
+options = ["[图:./_pic.deck/pic/幽暗之门/岭下暗影/岭下地图2.png]"]
+
+["岭下地图3"]
+export = true
+options = ["[图:./_pic.deck/pic/幽暗之门/岭下暗影/岭下地图3.png]"]
+
+["岭下展示1"]
+export = true
+options = ["[图:./_pic.deck/pic/幽暗之门/岭下暗影/岭下展示1.png]"]
+
+["岭下展示2"]
+export = true
+options = ["[图:./_pic.deck/pic/幽暗之门/岭下暗影/岭下展示2.png]"]
+
+# 幽暗之门·哈索恩山
+["哈索地图1"]
+export = true
+options = ["[图:./_pic.deck/pic/幽暗之门/哈索恩山/哈索地图1.png]"]
+
+["哈索地图2"]
+export = true
+options = ["[图:./_pic.deck/pic/幽暗之门/哈索恩山/哈索地图2.png]"]
+
+["哈索展示1"]
+export = true
+options = ["[图:./_pic.deck/pic/幽暗之门/哈索恩山/哈索展示1.png]"]
+
+["哈索展示2"]
+export = true
+options = ["[图:./_pic.deck/pic/幽暗之门/哈索恩山/哈索展示2.png]"]
+
+["哈索展示3"]
+export = true
+options = ["[图:./_pic.deck/pic/幽暗之门/哈索恩山/哈索展示3.png]"]
+
+["哈索展示4"]
+export = true
+options = ["[图:./_pic.deck/pic/幽暗之门/哈索恩山/哈索展示4.png]"]
+
+["哈索展示5-1"]
+export = true
+options = ["[图:./_pic.deck/pic/幽暗之门/哈索恩山/哈索展示5-1.png]"]
+
+["哈索展示5-2"]
+export = true
+options = ["[图:./_pic.deck/pic/幽暗之门/哈索恩山/哈索展示5-2.png]"]
+
+["哈索展示6"]
+export = true
+options = ["[图:./_pic.deck/pic/幽暗之门/哈索恩山/哈索展示6.png]"]
+
+# 幽暗之门·湖之仆从
+["仆从地图1"]
+export = true
+options = ["[图:./_pic.deck/pic/幽暗之门/湖之仆从/仆从地图1.png]"]
+
+["仆从地图2"]
+export = true
+options = ["[图:./_pic.deck/pic/幽暗之门/湖之仆从/仆从地图2.png]"]
+
+["仆从展示1"]
+export = true
+options = ["[图:./_pic.deck/pic/幽暗之门/湖之仆从/仆从展示1.png]"]
+
+["仆从展示2"]
+export = true
+options = ["[图:./_pic.deck/pic/幽暗之门/湖之仆从/仆从展示2.png]"]
+
+["仆从展示3"]
+export = true
+options = ["[图:./_pic.deck/pic/幽暗之门/湖之仆从/仆从展示3.png]\f[图:./_pic.deck/pic/幽暗之门/湖之仆从/仆从展示3-1.png]"]
+
+# 幽暗之门·血浓于水
+[""]
+export = true
+options = [""]
+
+# 幽暗之门·了却幻梦
+[""]
+export = true
+options = [""]
+
+[图:./_pic.deck/pic/幽暗之门/.png]
 
 # 你就刚刚好
 ["风铃草"]
@@ -53,3 +143,8 @@ options = ["[图:./_pic.deck/pic/你就刚刚好/风铃草.png]"]
 ["福尔摩斯事前公开"]
 export = true
 options = ["[图:./_pic.deck/pic/福尔摩斯/福1.png]\f[图:./_pic.deck/pic/福尔摩斯/福2.png]\f[图:./_pic.deck/pic/福尔摩斯/福3.png]\f[图:./_pic.deck/pic/福尔摩斯/福4.png]"]
+
+
+[""]
+export = true
+options = [""]
