--- a/call_of_cthulhu/picture/picture_all.toml
+++ b/call_of_cthulhu/picture/picture_all.toml
@@ -1,6 +1,6 @@
 [meta]
 title = "模组资料(图片)"
-author = "3987681449 更新时记得在release下载最新版本对应deck包"
+author = "3987681449 若图片更新,记得在release下载最新版本对应deck包"
 version = "1.0.0"
 license = "CC-BY-NC-SA 4.0"
 date = 2025-04-08
