--- a/call_of_cthulhu/picture/picture_all.toml
+++ b/call_of_cthulhu/picture/picture_all.toml
@@ -61,7 +61,23 @@ options = ["[图:./_pic.deck/pic/幽暗之门/岭下暗影/岭下展示1.png]\f1
 
 ["岭下展示2"]
 export = true
-options = ["[图:./_pic.deck/pic/幽暗之门/岭下暗影/岭下展示2.png]"]
+options = ["[图:./_pic.deck/pic/幽暗之门/岭下暗影/岭下展示2.png]\f但愿有人能在某天读到这些遗言，上帝保佑。我，约翰·哈珀，在此写下这些话用以记述我和我弟兄们悲惨的故事。文斯考特的聪明计划让我们全都玩完了。他觉得用他找到的隧道能避开罗德岛州政府的注意。但他该好好想想这些隧道一开始是用来干什么的。\n他说自己很幸运，但我们可是倒了大霉。当我们押送着他的货穿过隧道的时候，怪物袭击了我们，那些运气好的死在了它们的爪子和牙齿之下。而剩下的被抓到了这来。圣经和布道者告诉我们说上帝诅咒了蛇，让它们永世只得爬行。那为什么我们的新主人仍然能够用双脚行走？他和他的族人是怎么逃脱上帝的惩戒的？难道它们在惩戒来临的时候在此冬眠所以躲过了上帝的注意？现在我们侍奉着这只可憎的蛇。他强迫我们所有人为他工作。他强迫我们彼此交媾，就好像我们不过是牲口一样。我看着我的同伴们要么死去，要么日渐消瘦，还有的人被那只蛇折磨用以取乐。我们已经远离了上帝慈爱的视线。"]
+
+["岭下房屋"]
+export = true
+options = ["[图:./_pic.deck/pic/幽暗之门/岭下暗影/岭下房屋.png]"]
+
+["岭下文献馆"]
+export = true
+options = ["[图:./_pic.deck/pic/幽暗之门/岭下暗影/岭下文献馆.png]"]
+
+["岭下音乐室"]
+export = true
+options = ["[图:./_pic.deck/pic/幽暗之门/岭下暗影/岭下音乐室.png]"]
+
+["岭下茧房"]
+export = true
+options = ["[图:./_pic.deck/pic/幽暗之门/岭下暗影/岭下茧房.png]"]
 
 # 幽暗之门·哈索恩山
 ["哈索地图1"]
@@ -74,19 +90,19 @@ options = ["[图:./_pic.deck/pic/幽暗之门/哈索恩山/哈索地图2.png]"]
 
 ["哈索展示1"]
 export = true
-options = ["[图:./_pic.deck/pic/幽暗之门/哈索恩山/哈索展示1.png]"]
+options = ["[图:./_pic.deck/pic/幽暗之门/哈索恩山/哈索展示1.png]\f亲爱的，\n如你所见，在上一次尝试深入调查超自然现象后，我最近让自己来到位于丹弗斯的疗养院做一次精神上的恢复。但事实证明选择丹弗斯是一个十分糟糕的错误，这对我的身心都有着巨大的危险。在此地有一处“异常”，而他们不会让我离开的。而由于他们会检查通信所以我只能偷偷将这张纸条送出来给你。\n请前来将我从这个恐怖的地方解救出来，务必带上同伴而非独自前来。\n你的朋友\n拉里·克罗斯韦尔"]
 
 ["哈索展示2"]
 export = true
-options = ["[图:./_pic.deck/pic/幽暗之门/哈索恩山/哈索展示2.png]"]
+options = ["[图:./_pic.deck/pic/幽暗之门/哈索恩山/哈索展示2.png]\f丹弗斯州立医院\n450MapleST·Danvers,MA\n———————————\n亲爱的,\n请忽视我之前的信息。\n我当时正焦虑不安。\n这里一切都好，不用劳烦前来。\n我需要好好休息和咨询。\n万分感谢。\n\n你真诚的，\n劳伦斯·克罗斯韦尔\n"]
 
 ["哈索展示3"]
 export = true
-options = ["[图:./_pic.deck/pic/幽暗之门/哈索恩山/哈索展示3.png]"]
+options = ["[图:./_pic.deck/pic/幽暗之门/哈索恩山/哈索展示3.png]\f丹弗斯疗养院主管为患者建立环形露天剧场\n\n丹弗斯州立疗养院的工人们于今日动工建立一处供病人们娱乐的小型环形露天剧场。当地居民同时也可以在这个邻近疗养院蓄水池，如田园牧歌般的地方获得一处安静的谈话空间、诗歌朗诵以及音乐表演的净土。\n疗养院的住户，同时也是工头的安德鲁·麦克布莱德（AndrewMacBride），补充说他的团队在打碎并移除一块在山坡上剧场建址处，有着疑似艺术标志的大型花岗岩板的时候遇到了一些困难。疗养院的前主管，威廉·夏恩将这块石板放在了哈索恩山的山坡上。据说，夏恩医生，这位漫游世界的旅行者，相信这块花岗岩板会是疗养院好运的象征。\n当地的居民向为精神病人建立一处剧场的开支提出了质疑。然而，伯格医生坚持建立剧场，他解释说：“重要的是，我们必须牢记应该为所有的居民们谋求福祉，尤其是那些被认为过于脆弱或是那些不能成为更大世界潮流一部分而受到伤害的人们。"]
 
 ["哈索展示4"]
 export = true
-options = ["[图:./_pic.deck/pic/幽暗之门/哈索恩山/哈索展示4.png]"]
+options = ["[图:./_pic.deck/pic/幽暗之门/哈索恩山/哈索展示4.png]\f夏恩从丹弗斯疗养院退休\n\n塞勒姆当地的威廉·夏恩医生，丹弗斯州立疗养院的老主管，在他25年的无私奉献后迎来了退休。他的博学，宽厚待人以及卓有成效的治疗广为人知。他致力于改善病人生活治疗条件的事迹也广被赞颂。在1890年他到来之前，疗养院背负着恶名，职员们死气沉沉，病人的事故发生率和死亡率在本国中居高不下。\n夏恩主管突然出现并成功地掌控了同样这令人惊异的制度。老读者们可能会想起这位任期不到一年的主管用纳税人的钱在水库边上放置一块雕刻过的大理石板时所招致的抱怨。但就和现在一样，夏恩医生坚持即使主管离任时也让那块装饰用的石板放在那儿不受打扰。不管他那些奇怪的癖好，夏恩医生用他那漫长的任期让疗养院起死回生并获得成功的能力与事迹将长久流传。\n身为早年游历过许多海外地区的人，夏恩博士声明他现在只盼望在他的家乡塞勒姆度过安详的退休生活。博士已经确定会将他私人和官方的文档捐赠给塞勒姆医院。\n对于他的继任者詹姆斯·伯格医生，夏恩博士有着极高的评价：“伯格医生毫无疑问将会成为这些可怜人真诚的庇护者，同时他无疑也将会妥善管理疗养院。”夏恩补充道：“我衷心希望伯格医生能够抛去过去的一些习惯，并专注于建设疗养院光辉的明天。”\n本报衷心祝愿夏恩博士能有一个安详快乐的退休生活。"]
 
 ["哈索展示5-1"]
 export = true
@@ -171,7 +187,7 @@ options = ["[图:./_pic.deck/pic/幽暗之门/了却幻梦/幻梦展示1.png]"]
 # 你就刚刚好
 ["风铃草"]
 export = true
-options = ["[图:./_pic.deck/pic/你就刚刚好/风铃草.png]"]
+options = ["[CQ:image,file=https://github.com/errrr-er/alll/blob/main/call_of_cthulhu/picture/pic/%E4%BD%A0%E5%B0%B1%E5%88%9A%E5%88%9A%E5%A5%BD/%E2%BB%9B%E9%93%83%E8%8D%89.png?raw=true,type=show]"]
 
 
 #夏洛克·福尔摩斯症候群
